syntax = "proto3";

package major;

option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/module/major/proto/generated;generated";

import "google/protobuf/timestamp.proto";
import "pkg/proto/core/shared.proto";
import "module/school/proto/schoolPb.proto";


// Major service definition
service MajorService {
  rpc CreateMajor(CreateMajorRequest) returns (MajorResponse);
  rpc GetMajor(GetMajorRequest) returns (MajorResponse);
  rpc ListMajors(ListMajorsRequest) returns (ListMajorsResponse);
  rpc ListMajorsBySchool(ListMajorsBySchoolRequest) returns (ListMajorsResponse);
  rpc UpdateMajor(UpdateMajorRequest) returns (MajorResponse);
  rpc DeleteMajor(DeleteMajorRequest) returns (DeleteMajorResponse);
}

// Major message
message Major {
  string id = 1;
  string school_id = 2;
  core.LocalizedName name = 3;
  core.LocalizedAcronym acronym = 4;
  core.LocalizedDetails details = 5;
  core.Photos photos = 6;
  school.School school = 7;    // Embedded school information
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// Request messages
message CreateMajorRequest {
  string school_id = 1;
  core.LocalizedName name = 2;
  core.LocalizedAcronym acronym = 3;
  core.LocalizedDetails details = 4;
  core.Photos photos = 5;
}

message GetMajorRequest {
  string id = 1;
}

message ListMajorsRequest {
  core.PaginationRequest pagination = 1;
}

message ListMajorsBySchoolRequest {
  string school_id = 1;
  core.PaginationRequest pagination = 2;
}

message UpdateMajorRequest {
  string id = 1;
  core.LocalizedName name = 2;
  core.LocalizedAcronym acronym = 3;
  core.LocalizedDetails details = 4;
  core.Photos photos = 5;
}

message DeleteMajorRequest {
  string id = 1;
}

// Response messages
message MajorResponse {
  Major major = 1;
}

message ListMajorsResponse {
  repeated Major majors = 1;
  core.PaginationResponse pagination = 2;
}

message DeleteMajorResponse {
  bool success = 1;
} 