syntax = "proto3";

package core;

option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/pkg/proto/generated;generated";

import "google/protobuf/timestamp.proto";

// Common localized name structure
message LocalizedName {
    string th = 1;  // Thai name
    string en = 2;  // English name
}

// Common localized details structure
message LocalizedDetails {
    string th = 1;  // Thai details
    string en = 2;  // English details
}

// Common localized acronym structure
message LocalizedAcronym {
    string th = 1;  // Thai acronym
    string en = 2;  // English acronym
}

// Common photos structure
message Photos {
    string cover_photo = 1;      // Main cover photo
    string banner_photo = 2;     // Banner/header photo
    string thumbnail_photo = 3;  // Thumbnail for listings
    string logo_photo = 4;       // Logo photo
}

// Common pagination request
message PaginationRequest {
    int32 page = 1;  // Page number (1-based)
    int32 limit = 2; // Items per page
}

// Common pagination response
message PaginationResponse {
    int32 total = 1;  // Total number of items
    int32 page = 2;   // Current page
    int32 limit = 3;  // Items per page
}

// Common error response
message ErrorResponse {
    string code = 1;     // Error code
    string message = 2;  // Error message
    map<string, string> details = 3;  // Additional error details
}

// Common success response
message SuccessResponse {
    bool success = 1;  // Success flag
}

// Common metadata
message Metadata {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
    string created_by = 3;
    string updated_by = 4;
} 